--- a/prototypes/app/source/css/components/SmartNavBar.styl
+++ b/prototypes/app/source/css/components/SmartNavBar.styl
@@ -56,7 +56,7 @@ $SmartNavBar-disabledButtonColor = $text-muted; //rgb(200, 199, 204);
     */
     border-bottom: 1px solid $SmartNavBar-borderColor;
     
-    z-index: 200;
+    z-index: 500; // Higher even than menus
     user-select: none;
     -webkit-touch-callout: none;
 
