--- a/prototypes/app/source/css/utils/backdrop.styl
+++ b/prototypes/app/source/css/utils/backdrop.styl
@@ -11,10 +11,11 @@ backdrop() {
         -webkit-backface-visibility: hidden;
         transform: translateZ(0);
         position: fixed;
-        top: $app-navbar-height;
+        top: 0;
+        /*top: $app-navbar-height;
         @media $media-big-navbar {
             top: $big-navbar-height;
-        }
+        }*/
         bottom: 0;
         left: 0;
         right: 0;
